tests/fail/SignedShiftRight.java
package fail;

import java.lang.System;

public class SignedShiftRight {
    public static void main(String[] args){
        System.out.println('a'>>42);
    }
}